23.09.2023
- Fixed missing ability score

17.09.2023
- Changed initiative rules.
- Updated long and short rest rules.
- Added Feature modifications rule to Character Packages
- Updated magic features
- Updated death saving throws
- Removed variable maximum hit points

18.09.2023
- Updated styles. Should work on mobiles now.